# robot_rover

./: README.md
robotic_control_client/: CMakeLists.txt  joystick.cpp  joystick.hpp  main.cpp  robotic_control_client.cpp  robotic_control_client.hpp  thread_pool.hpp  zmq_socket.hpp
robotic_control_client/proto/: control_request.proto  server_response.proto
robotic_control_server/: CMakeLists.txt  camera_factory.cpp  camera_factory.hpp  daemonize.hpp  helper.hpp  logger.hpp  main.cpp  motor.cpp  motor.hpp  motor_controller.cpp  motor_controller.hpp  robotic_control_server.cpp  robotic_control_server.hpp  thread_pool.hpp  timer.hpp  zmq_socket.hpp
robotic_control_server/proto/: CMakeLists.txt  control_request.proto  server_response.proto
